fix showcase h3 spacing

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ nav a:hover {
 }
 
 .showcase h3 {
-margin-bottom: 50px;
+margin-bottom: 10px;
 }
 
 .aboutmecontent {
